feat: Posiciona puntos de Derrame

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6449,6 +6449,34 @@
                       class="location-map-dot"
                     ></span>
                   </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-4"
+                  >
+                    <span
+                      style="--outline-color: #0036ff; left: 350px; top: 302px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #0036ff; left: 448px; top: 331px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-5"
+                  >
+                    <span
+                      style="--outline-color: #ff7171; left: 341px; top: 309px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 361px; top: 283px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
                 </div>
                 <img
                   class="img-fluid map-terminal-2024"
