feat: Posiciona puntos de Evacuación

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6477,6 +6477,34 @@
                       class="location-map-dot"
                     ></span>
                   </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-8"
+                  >
+                    <span
+                      style="--outline-color: #acff9c; left: 525px; top: 187px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-10"
+                  >
+                    <span
+                      style="--outline-color: #27ff00; left: 276px; top: 353px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #27ff00; left: 408px; top: 411px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #27ff00; left: 886px; top: 370px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
                 </div>
                 <img
                   class="img-fluid map-terminal-2024"
