feat: Posiciona puntos de Primeros Auxilios

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -5615,7 +5615,7 @@
                       </div>
 
                       <div
-                        data-target="covenas-sre-18"
+                        data-target="covenas-sre-19"
                         style="gap: 16px"
                         class="d-flex align-items-center card-interactive-icons__container mt-2"
                       >
@@ -6502,6 +6502,62 @@
                     ></span>
                     <span
                       style="--outline-color: #27ff00; left: 886px; top: 370px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-13"
+                  >
+                    <span
+                      style="--outline-color: #ff5512; left: 381px; top: 514px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff5512; left: 438px; top: 564px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff5512; left: 478px; top: 504px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff5512; left: 549px; top: 497px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff5512; left: 605px; top: 480px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-16"
+                  >
+                    <span
+                      style="--outline-color: #a80a0a; left: 389px; top: 439px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-17"
+                  >
+                    <span
+                      style="--outline-color: #00ccff; left: 389px; top: 442px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-19"
+                  >
+                    <span
+                      style="--outline-color: #ff0000; left: 389px; top: 439px"
                       class="location-map-dot"
                     ></span>
                   </div>
