--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -2015,14 +2015,20 @@
             </div>
 
             <div id="info-operaciones" class="card-list-info d-none">
-              <div class="card-interactive-icons px-5 py-3">
+              <div class="card-interactive-icons px-3 px-lg-5 py-3">
                 <h6
-                  class="card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
+                  data-accordion="accordion-item-lista-equipos"
+                  class="accordion-title d-flex d-md-block align-items-center justify-content-between card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
                 >
-                  Lista de Equipos
+                  <span class="accordion-title__text"
+                    >Lista de Equipos</span
+                  >
+                  <span class="accordion-title__arrow d-block d-md-none">
+                    <img src="/assets/img/icons/arrow-glyph-down.svg" alt="" />
+                  </span>
                 </h6>
 
-                <div class="row mt-3">
+                <div id="accordion-item-lista-equipos" class="row mt-lg-3 accordion-item">
                   <div class="col-12 col-lg-6">
                     <div
                       data-target="covenas-operaciones-1"
@@ -3913,16 +3919,22 @@
               </div>
 
               <div
-                class="card-interactive-icons px-5 py-3 mt-3"
-                style="min-width: 750px; z-index: 3"
+                id="card-areas-de-servicio"
+                class="card-interactive-icons px-3 px-lg-5 py-3 mt-3"
               >
                 <h6
-                  class="card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
+                  data-accordion="accordion-item-lista-areas-servicio"
+                  class="accordion-title d-flex d-md-block align-items-center justify-content-between card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
                 >
-                  Lista Áreas de Servicio Ocensa
+                  <span class="accordion-title__text"
+                    >Lista Áreas de Servicio Ocensa</span
+                  >
+                  <span class="accordion-title__arrow d-block d-md-none">
+                    <img src="/assets/img/icons/arrow-glyph-down.svg" alt="" />
+                  </span>
                 </h6>
 
-                <div class="row mt-3">
+                <div id="accordion-item-lista-areas-servicio" class="row mt-lg-3 accordion-item">
                   <div class="col-12 col-lg-4">
                     <div
                       data-target="covenas-operaciones-25"
@@ -4343,7 +4355,7 @@
                     </div>
                   </div>
 
-                  <div style="margin-top: -43px" class="col-12 col-lg-4">
+                  <div class="col-12 col-lg-4 mt-1 mt-lg-0">
                     <div
                       data-target="covenas-operaciones-33"
                       style="gap: 16px"
