feat: Posiciona puntos de Incendio

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6534,6 +6534,204 @@
 
                   <div
                     class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-14"
+                  >
+                    <span
+                      style="left: 397px; top: 304px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 390px; top: 320px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 415px; top: 307px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 436px; top: 310px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 418px; top: 328px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 442px; top: 320px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 435px; top: 347px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 446px; top: 339px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 459px; top: 330px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 469px; top: 320px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 461px; top: 352px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 477px; top: 342px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 491px; top: 330px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 509px; top: 320px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 502px; top: 343px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 510px; top: 333px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 526px; top: 324px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 519px; top: 343px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 541px; top: 328px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 540px; top: 343px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 504px; top: 368px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 528px; top: 369px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 503px; top: 385px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 522px; top: 397px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 536px; top: 388px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 551px; top: 378px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 574px; top: 366px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 707px; top: 311px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 760px; top: 336px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 607px; top: 380px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 640px; top: 393px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 563px; top: 427px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 615px; top: 444px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 633px; top: 429px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 6500px; top: 415px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 673px; top: 405px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 689px; top: 394px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 710px; top: 380px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 734px; top: 369px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 772px; top: 381px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 792px; top: 392px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 781px; top: 416px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 767px; top: 432px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 754px; top: 451px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 734px; top: 469px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 712px; top: 488px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 669px; top: 480px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 647px; top: 466px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-sre-16"
                   >
                     <span
