feat: Posiciona puntos de Incendio Hidratante Monitor de Espuma

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6930,7 +6930,7 @@
                       class="location-map-dot"
                     ></span>
                     <span
-                      style="left: 6500px; top: 415px"
+                      style="left: 650px; top: 415px"
                       class="location-map-dot"
                     ></span>
                     <span
@@ -6983,6 +6983,236 @@
                     ></span>
                     <span
                       style="left: 647px; top: 466px"
+                      class="location-map-dot"
+                    ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-15"
+                  >
+                    <span
+                      style="left: 382px; top: 306px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 379px; top: 320px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 418px; top: 306px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 439px; top: 315px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 408px; top: 331px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 428px; top: 325px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 433px; top: 342px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 449px; top: 334px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 460px; top: 324px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 448px; top: 347px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 460px; top: 352px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 476px; top: 343px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 506px; top: 323px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 494px; top: 345px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 511px; top: 337px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 528px; top: 329px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 524px; top: 341px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 545px; top: 334px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 533px; top: 351px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 510px; top: 354px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 506px; top: 370px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 531px; top: 371px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 496px; top: 384px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 516px; top: 403px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 531px; top: 391px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 549px; top: 383px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 574px; top: 366px"
+                      class="location-map-dot"
+                    ></span>                    
+                    <span
+                      style="left: 607px; top: 384px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 640px; top: 396px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 559px; top: 424px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 611px; top: 442px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 629px; top: 430px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 646px; top: 420px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 662px; top: 409px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 689px; top: 394px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 716px; top: 380px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 737px; top: 371px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 761px; top: 380px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 783px; top: 397px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 776px; top: 416px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 767px; top: 433px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 755px; top: 453px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 734px; top: 469px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 712px; top: 487px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 659px; top: 480px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 620px; top: 462px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 738px; top: 324px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 748px; top: 306px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 778px; top: 288px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 813px; top: 302px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 804px; top: 313px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 782px; top: 322px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 766px; top: 334px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 761px; top: 351px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 802px; top: 357px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="left: 830px; top: 342px"
                       class="location-map-dot"
                     ></span>
                   </div>
