feat: Posiciona puntos de Incendio Leyenda

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6768,23 +6768,23 @@
                     id="covenas-sre-13"
                   >
                     <span
-                      style="--outline-color: #ff5512; left: 381px; top: 514px"
+                      style="left: 385px; top: 515px"
                       class="location-map-dot"
                     ></span>
                     <span
-                      style="--outline-color: #ff5512; left: 438px; top: 564px"
+                      style="left: 433px; top: 572px"
                       class="location-map-dot"
                     ></span>
                     <span
-                      style="--outline-color: #ff5512; left: 478px; top: 504px"
+                      style="left: 476px; top: 507px"
                       class="location-map-dot"
                     ></span>
                     <span
-                      style="--outline-color: #ff5512; left: 549px; top: 497px"
+                      style="left: 556px; top: 497px"
                       class="location-map-dot"
                     ></span>
                     <span
-                      style="--outline-color: #ff5512; left: 605px; top: 480px"
+                      style="left: 607px; top: 482px"
                       class="location-map-dot"
                     ></span>
                   </div>
