feat: Posiciona puntos de Cambio climático

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6255,6 +6255,58 @@
                     id="covenas-monitoreo-12"
                   >
                     <span
+                      style="--outline-color: #ff7171; left: 401px; top: 308px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 461px; top: 314px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 481px; top: 328px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 521px; top: 365px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 419px; top: 515px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 528px; top: 462px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 596px; top: 410px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 393px; top: 430px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 393px; top: 430px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 393px; top: 430px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 393px; top: 430px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 393px; top: 430px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
+                      style="--outline-color: #ff7171; left: 393px; top: 430px"
+                      class="location-map-dot"
+                    ></span>
+                    <span
                       style="--outline-color: #ff7171; left: 393px; top: 430px"
                       class="location-map-dot"
                     ></span>
