feat: Posiciona área marcada de fuente de emisión de ruido y de SRE Área de control

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6314,6 +6314,14 @@
 
                   <div
                     class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-monitoreo-13"
+                  >
+                    <img src="/assets/img/maps/fuente-emision-ruido.webp" alt="Fuente de Emisión de Ruido" class="location-map-zona"
+                    style="position: absolute; left: 365px; top: 320px">                  
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-monitoreo-14"
                   >
                     <span
@@ -6757,6 +6765,44 @@
                       style="--outline-color: #21a605; left: 349px; top: 477px"
                       class="location-map-dot"
                     ></span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-1"
+                  >
+                    <span
+                      style="position: absolute; left: 90px; top: 245px"
+                      class="location-map-zona"
+                    >
+                      <svg data-name="Grupo 646" xmlns="http://www.w3.org/2000/svg" width="367.968" height="90.154" viewBox="0 0 367.968 90.154">
+                        <defs>
+                            <clipPath id="2my03x6sha">
+                                <rect data-name="Rectángulo 162" width="367.968" height="90.154" rx="4" style="fill:#ff0000;stroke:#ff0000"/>
+                            </clipPath>
+                            <clipPath id="yldg90sv2b">
+                                <path data-name="Rectángulo 161" style="fill:#ff0000;stroke:#ff0000" d="M0 0h367.968v90.154H0z"/>
+                            </clipPath>
+                            <clipPath id="3gzkaq780c">
+                                <path data-name="Rectángulo 160" style="fill:#ff0000;stroke:#ff0000" d="M0 0h366.3v88.485H0z"/>
+                            </clipPath>
+                        </defs>
+                        <g data-name="Grupo 645" style="clip-path:url(#2my03x6sha)">
+                            <g data-name="Grupo 644">
+                                <g data-name="Grupo 643" style="clip-path:url(#yldg90sv2b)">
+                                    <g data-name="Grupo 642" style="opacity:.26">
+                                        <g data-name="Grupo 641">
+                                            <g data-name="Grupo 640" style="clip-path:url(#3gzkaq780c)" transform="translate(.834 .834)">
+                                                <path data-name="Trazado 851" d="M5.943 89.485c1.977-.495 11.864-3.955 11.864-3.955l4.45 1.978 4.449-3.955 9.394 1.484 18.785-8.4s10.378 1.973 11.861 1.973 24.222-8.9 24.222-8.9l5.437-8.4h7.415l81.565-29.659 24.715 7.413 6.92-2.966c4.943 1.483 8.4-2.472 8.4-2.472l10.88-1.483 8.4-1.483 14.335-3.46 11.37-2.472 2.472 2.472 29.66-8.9 17.8-4.45 5.932-3.46 19.279-2.966 7.416 2.476 6.427-.989 3.46-.989 4.449-4.945L347.527 1l-25.211 4.943-7.909 4.449-40.041 10.875-3.46-5.437-44 11.369-9.392 2.966-5.932 3.46-24.717-8.4L105.8 53.4H93.934l-6.426 12.358-19.279 7.909L53.4 70.7l-15.819 8.9-10.876-2.473-4.943 4.943-5.438-2.47L1 85.037z" transform="translate(-1 -1)" style="fill:#ff0000;stroke:#ff0000"/>
+                                            </g>
+                                        </g>
+                                    </g>
+                                    <path data-name="Trazado 852" d="M5.943 89.485c1.977-.495 11.864-3.955 11.864-3.955l4.45 1.978 4.449-3.955 9.394 1.484 18.785-8.4s10.378 1.973 11.861 1.973 24.222-8.9 24.222-8.9l5.437-8.4h7.415l81.565-29.659 24.715 7.413 6.92-2.966c4.943 1.483 8.4-2.472 8.4-2.472l10.88-1.483 8.4-1.483 14.335-3.46 11.37-2.472 2.472 2.472 29.66-8.9 17.8-4.45 5.932-3.46 19.279-2.966 7.416 2.476 6.427-.989 3.46-.989 4.449-4.945L347.527 1l-25.211 4.943-7.909 4.449-40.041 10.875-3.46-5.437-44 11.369-9.392 2.966-5.932 3.46-24.717-8.4L105.8 53.4H93.934l-6.426 12.358-19.279 7.909L53.4 70.7l-15.819 8.9-10.876-2.473-4.943 4.943-5.438-2.47L1 85.037z" transform="translate(-.166 -.166)" style="stroke-linecap:round;stroke-linejoin:round;stroke-width:2px;fill:#ff0000;stroke:#ff0000"/>
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
+                    </span>
                   </div>
 
                   <div
