--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -30,7 +30,7 @@
   <body class="body-2024">
     <div class="container-ocensa-2024">
       <section class="bg-dark banner-principal py-5 position-relative">
-        <div class="container">
+        <div class="container-banner-principal">
           <div class="row align-items-center">
             <div class="col-xs-12 col-lg-6">
               <h1
@@ -51,7 +51,7 @@
               </p>
               <div
                 style="gap: 10px; box-sizing: border-box"
-                class="d-flex flex-wrap flex-row mt-3 mt-lg-5 mb-5 mb-lg-0 certifieds"
+                class="d-flex flex-row mt-3 mt-lg-5 mb-5 mb-lg-0 certifieds"
               >
                 <img
                   class="img-fluid"
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-xs-12 col-md-9 px-2">
                   <p class="text-light">
-                    <b>Recibe todos los volúmenes</b> que transporte el
+                    <b>Recibe todos los volúmenes</b> que transporta el
                     oleoducto.
                   </p>
                 </div>
@@ -132,7 +132,7 @@
                 </div>
                 <div class="col-xs-12 col-md-9 px-2">
                   <p class="text-light">
-                    Despacha los crudos de exportación hacia las unidades de carga de <b>tanqueros TLU</b> (Tanker loading unit), localizadas costa afuera.
+                    Despacha los crudos de exportación hacia las unidades de carga de <b>tanqueros TLU</b>, localizadas costa afuera.
                   </p>
                 </div>
               </div>
@@ -5736,15 +5736,19 @@
                 </div>
 
                 <div
-                  class="card-interactive-icons px-5 py-3 card-primeros-auxilios w-100"
+                  class="card-interactive-icons px-3 px-lg-5 py-3 mt-lg-3"
                 >
-                  <h6
-                    class="card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
-                  >
-                    Primeros Auxilios
-                  </h6>
+                <h6
+                  data-accordion="accordion-item-primeros-auxilios"
+                  class="accordion-title d-flex d-md-block align-items-center justify-content-between card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
+                >
+                  <span class="accordion-title__text">Primeros Auxilios</span>
+                  <span class="accordion-title__arrow d-block d-md-none">
+                    <img src="/assets/img/icons/arrow-glyph-down.svg" alt="" />
+                  </span>
+                </h6>
 
-                  <div class="row mt-3">
+                  <div id="accordion-item-primeros-auxilios" class="accordion-item row mt-lg-3">
                     <div class="col-12 col-lg-6">
                       <div
                         data-target="covenas-sre-16"
@@ -5942,10 +5946,9 @@
               </div>
             </div>
           </div>
-          <div id="col-map" class="col">
+          <div id="col-map" class="col px-0">
             <div
-              class="text-center position-relative"
-              style="overflow-x: scroll"
+              class="text-center position-relative wrapper-scroll"
             >
               <div
                 id="container-map-terminal-2024"
@@ -7078,7 +7081,7 @@
                 <div class="col-xs-12 col-md-4 px-2">
                   <img
                     class="img-fluid mx-auto mx-lg-0"
-                    src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
+                    src="/assets/img/icons/iconos-generales-ocensa-blog-2@2x.webp"
                     alt=""
                   />
                 </div>
@@ -7101,7 +7104,7 @@
                 <div class="col-xs-12 col-md-4 px-2">
                   <img
                     class="img-fluid mx-auto mx-lg-0"
-                    src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
+                    src="/assets/img/icons/iconos-generales-ocensa-blog-2@2x.webp"
                     alt=""
                   />
                 </div>
@@ -7124,7 +7127,7 @@
                 <div class="col-xs-12 col-md-4 px-2">
                   <img
                     class="img-fluid mx-auto mx-lg-0"
-                    src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
+                    src="/assets/img/icons/iconos-generales-ocensa-blog-2@2x.webp"
                     alt=""
                   />
                 </div>
@@ -7147,7 +7150,7 @@
                 <div class="col-xs-12 col-md-4 px-2">
                   <img
                     class="img-fluid mx-auto mx-lg-0"
-                    src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
+                    src="/assets/img/icons/iconos-generales-ocensa-blog-2@2x.webp"
                     alt=""
                   />
                 </div>
@@ -7170,7 +7173,7 @@
                 <div class="col-xs-12 col-md-4 px-2">
                   <img
                     class="img-fluid mx-auto mx-lg-0"
-                    src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
+                    src="/assets/img/icons/iconos-generales-ocensa-blog-2@2x.webp"
                     alt=""
                   />
                 </div>
@@ -7193,7 +7196,7 @@
                 <div class="col-xs-12 col-md-4 px-2">
                   <img
                     class="img-fluid mx-auto mx-lg-0"
-                    src="/assets/img/icons/iconos-generales-ocensa-blog-2.webp"
+                    src="/assets/img/icons/iconos-generales-ocensa-blog-2@2x.webp"
                     alt=""
                   />
                 </div>
