feat: Agrega zona de Cerramiento

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6845,6 +6845,28 @@
 
                   <div
                     class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-2"
+                  >
+                    <span
+                      style="scale: 1.13; position: absolute; left: 288px; top: 246px"
+                      class="location-map-zona"
+                    >
+                      <svg data-name="Grupo 640" xmlns="http://www.w3.org/2000/svg" width="582.085" height="356.078" viewBox="0 0 582.085 356.078">
+                          <defs>
+                              <clipPath id="nquor4a98a">
+                                  <path data-name="Rectángulo 160" style="fill:none;stroke:#a8ff00" d="M0 0h582.085v356.078H0z"/>
+                              </clipPath>
+                          </defs>
+                          <g data-name="Grupo 639" style="clip-path:url(#nquor4a98a)">
+                              <path data-name="Trazado 851" d="M111.583 69.311 4.29 133.132a6.734 6.734 0 0 0-3.09 7.418l6.7 26.812a6.192 6.192 0 0 0 7.509 4.506l1.924-.481s4.958-.5 10.907 6.445c5.222 6.092 92.952 141.294 114.318 174.25a7.29 7.29 0 0 0 11.019 1.429l38.336-34.779a13.148 13.148 0 0 1 7.971-3.382l128.746-8.49a19.731 19.731 0 0 0 3.978-.675l65.964-18.3 12.394-1.983 7.8 4.8a8.637 8.637 0 0 0 9.814-.526l8.005-6.2a13.7 13.7 0 0 0 4.042-5.071l59.2-127.714a7.6 7.6 0 0 1 7.927-4.336l38.061 5.19h32.11a3.486 3.486 0 0 0 3.013-5.24l-16.283-27.975-11.368-17.249a13.69 13.69 0 0 0-8.334-5.8l-22.443-5.203-31.886-28.19a14.274 14.274 0 0 0-5.282-2.956L296 1.577a13.23 13.23 0 0 0-8 .084l-27.343 8.989a1.934 1.934 0 0 0-.158 3.614l9.084 3.893a.04.04 0 0 1 0 .074l-8.337 2.886a1.529 1.529 0 0 0 .057 2.909l10.809 3.274a.29.29 0 0 1-.018.56L261.1 30.428a.836.836 0 0 0-.082 1.6l167.3 57.554 20.664 27.123a5.159 5.159 0 0 1-.982 7.236l-4.329 3.291a11.1 11.1 0 0 1-8.823 2.058L118.906 68.035a10.445 10.445 0 0 0-7.323 1.276z" transform="translate(-.163 -.163)" style="stroke-miterlimit:10;stroke-width:2px;fill:none;stroke:#a8ff00"/>
+                              <path data-name="Línea 47" transform="translate(428.154 60.174)" style="stroke-miterlimit:10;stroke-width:2px;fill:none;stroke:#a8ff00" d="M59.986 0 0 29.249"/>
+                          </g>
+                      </svg>
+                    </span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-sre-4"
                   >
                     <span
