feat: Agrega zona de Ruta de Acceso

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6867,6 +6867,28 @@
 
                   <div
                     class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-3"
+                  >
+                    <span
+                      style="scale: 1.13; position: absolute; left: 215px; top: 219px"
+                      class="location-map-zona"
+                    >
+                      <svg data-name="Grupo 643" xmlns="http://www.w3.org/2000/svg" width="391.697" height="182.566" viewBox="0 0 391.697 182.566">
+                          <defs>
+                              <clipPath id="gfpc8gklza">
+                                  <path data-name="Rectángulo 161" style="fill:none;stroke:#4dff5f" d="M0 0h391.697v182.566H0z"/>
+                              </clipPath>
+                          </defs>
+                          <g data-name="Grupo 642" style="clip-path:url(#gfpc8gklza)">
+                              <path data-name="Trazado 855" d="M391.028 1.96s-3.145-1.779-4.944-.495c-6.92 4.943-10.282 1.864-12.851 2.966C366.311 7.4 358.4 7.4 356.425 8.88s-28.176 10.381-28.176 10.381-5.933 2.472-9.392 3.954a5.517 5.517 0 0 1-5.933-.989l-7.91 3.955s-4.943-2.966-6.426-1.977-2.966 4.943-2.966 4.943l-5.437 1.482-4.943-.989-5.932 1.483-4.944 5.932-7.414 7.91-71.679 27.19-134.459 77.116L1 181.9" transform="translate(-.166 -.166)" style="stroke-linecap:round;stroke-linejoin:round;stroke-width:2px;fill:none;stroke:#4dff5f"/>
+                              <path data-name="Línea 46" transform="translate(75.478 63.092)" style="stroke-linecap:round;stroke-linejoin:round;stroke-width:2px;fill:none;stroke:#4dff5f" d="M89.969 25.211 0 0"/>
+                          </g>
+                      </svg>
+                    </span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-sre-4"
                   >
                     <span
