feat: Agrega zona de Ruta de Acceso On Shore

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6917,6 +6917,28 @@
 
                   <div
                     class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-6"
+                  >
+                    <span
+                      style="scale: 0.55; position: absolute; left: 230px; top: 266px"
+                      class="location-map-zona"
+                    >
+                      <svg data-name="Grupo 647" xmlns="http://www.w3.org/2000/svg" width="191.725" height="128.624" viewBox="0 0 191.725 128.624">
+                          <defs>
+                              <clipPath id="ik1cgvptla">
+                                  <path data-name="Rectángulo 167" style="fill:#ce0000;stroke:#ce0000" d="M0 0h191.724v128.624H0z"/>
+                              </clipPath>
+                          </defs>
+                          <g data-name="Grupo 646" style="clip-path:url(#ik1cgvptla)">
+                              <path data-name="Trazado 860" d="M30.692 128.306a1.754 1.754 0 0 1-.382-.041l-28.79-6.311a1.775 1.775 0 0 1-.52-3.266l184.411-107.7L164.2 3.577a1.775 1.775 0 0 1 1.17-3.351L190.215 8.9a1.775 1.775 0 0 1 .311 3.209L6.72 119.46l24.35 5.34a1.775 1.775 0 0 1-.378 3.509" transform="translate(.097 .098)" style="fill:#ce0000;stroke:#ce0000"/>
+                              <path data-name="Trazado 861" d="M30.692 128.306a1.754 1.754 0 0 1-.382-.041l-28.79-6.311a1.775 1.775 0 0 1-.52-3.266l184.411-107.7L164.2 3.577a1.775 1.775 0 0 1 1.17-3.351L190.215 8.9a1.775 1.775 0 0 1 .311 3.209L6.72 119.46l24.35 5.34a1.775 1.775 0 0 1-.378 3.509z" transform="translate(.097 .098)" style="stroke-miterlimit:10;stroke-width:.25px;fill:#ce0000;stroke:#ce0000"/>
+                          </g>
+                      </svg>
+                    </span>
+                  </div>
+
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-sre-8"
                   >
                     <span
